[project]
name = "dot-buspads-inference"
version = "0.2.0"
description = "Stage 2: bus pad detection inference from chipped aerial orthoimagery."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "ultralytics>=8.4.0,<8.5",
    "torch",
]

[project.optional-dependencies]
coreml = ["coremltools"]
onnx = ["onnxruntime"]
openvino = ["openvino"]
dev = [
    "pytest",
    "ruff",
]