[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "buspad-inference-chipper"
version = "0.1.0"
description = "Chip georeferenced JP2 tiles for YOLO bus pad detection inference."
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.scripts]
buspad-inference-chip = "buspad_inference_chipper.chip_tiles:main"